--- a/Wallboards.UI/Views/Shared/_Layout.cshtml
+++ b/Wallboards.UI/Views/Shared/_Layout.cshtml
@@ -1,138 +1,71 @@
 ﻿
-<!DOCTYPE html>
+<!DOCTYPE HTML>
 <html lang="ru">
+
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <meta name="description" content="Wallboards - analytical dashboard">
-    <meta name="author" content="UzEx">
-    <link rel="shortcut icon" href="/favicon.ico">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
 
-    <title>Wallboards - @ViewBag.Title</title>
+    <title>@ViewBag.Title | Wallboards</title>
 
-    <link href="/assets/css/bootstrap.min.css" rel="stylesheet" type="text/css">
-    <link href="/assets/css/core.css" rel="stylesheet" type="text/css">
-    <link href="/assets/css/icons.css" rel="stylesheet" type="text/css">
-    <link href="/assets/css/components.css" rel="stylesheet" type="text/css">
-    <link href="/assets/css/pages.css" rel="stylesheet" type="text/css">
-    <link href="/assets/css/menu.css" rel="stylesheet" type="text/css">
-    <link href="/assets/css/responsive.css" rel="stylesheet" type="text/css">
-    <link href="/assets/plugins/switchery/switchery.min.css" rel="stylesheet" />
-    <link href="/assets/plugins/jquery-circliful/css/jquery.circliful.css" rel="stylesheet" type="text/css" />
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="~/assets/css/bootstrap.min.css">
 
-    <script src="/assets/js/modernizr.min.js"></script>
+    <!-- Google Font Roboto -->
+    <link rel="stylesheet" href="/assets/fonts/font-roboto.css">
 
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-    <script src="/assets/js/html5shiv.js"></script>
-    <script src="/assets/js/respond.min.js"></script>
-    <![endif]-->
+    <link href="~/Assets/css/dashboard.css" rel="stylesheet" />
 
     @RenderSection("css", false)
 
 </head>
+<body>
+    <nav class="navbar navbar-toggleable-md navbar-inverse fixed-top bg-inverse">
+        <button class="navbar-toggler navbar-toggler-right hidden-lg-up" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <a class="navbar-brand" href="/">Wallboards</a>
 
-
-<body class="fixed-left">
-
-    <!-- Begin page -->
-    <div id="wrapper">
-
-        <!-- Top Bar Start -->
-        <div class="topbar">
-
-            <!-- LOGO -->
-            <div class="topbar-left">
-                <div class="text-center">
-                    <a href="@Url.Action("Index","Home")" class="logo"><i class="md md-equalizer"></i> <span>Wallboards</span> </a>
-                </div>
-            </div>
-
-            <!-- Navbar -->
-            <div class="navbar navbar-default" role="navigation">
-                <div class="container">
-                    <div class=""> 
-                        <ul class="nav navbar-nav navbar-right pull-right">
-
-                            <li class="dropdown hidden-xs">
-                                <a href="#" data-target="#" class="dropdown-toggle waves-effect waves-light"
-                                   data-toggle="dropdown" aria-expanded="true">
-                                    <i class="md md-settings"></i>
-                                </a>
-                                <ul class="dropdown-menu">
-                                    <li><a href="javascript:void(0)"><i class="md md-face-unlock"></i> Профиль</a></li>
-                                    <li><a href="@Url.Action("LogOff","Account")"><i class="md md-settings-power"></i> Выйти</a></li>
-                                </ul>
-                            </li>
-                        </ul>
+        <div class="collapse navbar-collapse" id="navbarsExampleDefault">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Центр</a>
+                    <div class="dropdown-menu" aria-labelledby="dropdown01">
+                        <a class="dropdown-item" href="@Url.Action("Index","Center",new { id=1})">Первый панель</a>
+                        <a class="dropdown-item" href="@Url.Action("Index","Center",new { id=2})">Второй панель</a>
+                        <a class="dropdown-item" href="@Url.Action("Index","Center",new { id=3})">Третий панель</a>
+                        <a class="dropdown-item" href="@Url.Action("Index","Center",new { id=4})">Четвертый панель</a>
                     </div>
-                    <!--/.nav-collapse -->
-                </div>
-            </div>
-        </div>
-        <!-- Top Bar End -->
-        
-        <!-- Start right Content here -->
-        <!-- ============================================================== -->
-        <div class="content-page">
-            <!-- Start content -->
-            <div class="content">
-                <div class="container">
-
-                    <!-- Page-Title -->
-                    <div class="row">
-                        <div class="col-sm-12">
-                            <div class="page-title-box">
-                                <h4 class="page-title">@ViewBag.Title</h4>
-                            </div>
-                        </div>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown02" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">ИТ</a>
+                    <div class="dropdown-menu" aria-labelledby="dropdown02">
+                        <a class="dropdown-item" href="@Url.Action("Index","IT",new { id=1})">Первый панель</a>
+                        <a class="dropdown-item" href="@Url.Action("Index","IT",new { id=2})">Второй панель</a>
+                        <a class="dropdown-item" href="@Url.Action("Index","IT",new { id=3})">Третий панель</a>
+                        <a class="dropdown-item" href="@Url.Action("Index","IT",new { id=4})">Четвертый панель</a>
                     </div>
-
-                    @RenderBody()
-
-                </div>
-                <!-- end container -->
-
-            </div>
-            <!-- end content -->
+                </li>
+            </ul>
+            <form class="form-inline mt-2 mt-md-0" method="post" action="@Url.Action("LogOff","Account")">
+                @Html.AntiForgeryToken()
+                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Выйти</button>
+            </form>
         </div>
-        <!-- ============================================================== -->
-        <!-- End Right content here -->
-        <!-- ============================================================== -->
-    </div>
-    <!-- END wrapper -->
+    </nav>
 
-    <script>
-        var resizefunc = [];
-    </script>
+    <div class="container-fluid">
+        @RenderBody()
+    </div> 
+    <!-- container -->
 
-    <!-- jQuery  -->
-    <script src="/assets/js/jquery.min.js"></script>
-    <script src="/assets/js/bootstrap.min.js"></script>
-    <script src="/assets/js/detect.js"></script>
-    <script src="/assets/js/fastclick.js"></script>
-    <script src="/assets/js/jquery.slimscroll.js"></script>
-    <script src="/assets/js/jquery.blockUI.js"></script>
-    <script src="/assets/js/waves.js"></script>
-    <script src="/assets/js/wow.min.js"></script>
-    <script src="/assets/js/jquery.nicescroll.js"></script>
-    <script src="/assets/js/jquery.scrollTo.min.js"></script>
-    <script src="/assets/plugins/switchery/switchery.min.js"></script>
-
-    <!-- Counter Up  -->
-    <script src="/assets/plugins/waypoints/lib/jquery.waypoints.js"></script>
-    <script src="/assets/plugins/counterup/jquery.counterup.min.js"></script>
-
-    <!-- skycons -->
-    <script src="/assets/plugins/skyicons/skycons.min.js" type="text/javascript"></script>
-
-    <!-- Custom main Js -->
-    <script src="/assets/js/jquery.core.js"></script>
-    <script src="/assets/js/jquery.app.js"></script>
+    <!-- Scripts -->
+    <script src="~/assets/js/jquery-3.1.0.min.js"></script>
+    <script src="~/assets/js/tether.min.js"></script>
+    <script src="~/assets/js/bootstrap.min.js"></script>
 
     @RenderSection("js", false)
 
 </body>
-
 </html>
