--- a/Wallboards.UI/Views/Shared/_Layout.cshtml
+++ b/Wallboards.UI/Views/Shared/_Layout.cshtml
@@ -32,19 +32,19 @@
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Центр</a>
                     <div class="dropdown-menu" aria-labelledby="dropdown01">
-                        <a class="dropdown-item" href="@Url.Action("Index","Center",new { id=1})">Первый панель</a>
-                        <a class="dropdown-item" href="@Url.Action("Index","Center",new { id=2})">Второй панель</a>
-                        <a class="dropdown-item" href="@Url.Action("Index","Center",new { id=3})">Третий панель</a>
-                        <a class="dropdown-item" href="@Url.Action("Index","Center",new { id=4})">Четвертый панель</a>
+                        <a class="dropdown-item" href="@Url.Action("Index","Center")#panel-1">Первый панель</a>
+                        <a class="dropdown-item" href="@Url.Action("Index","Center")#panel-2">Второй панель</a>
+                        <a class="dropdown-item" href="@Url.Action("Index","Center")#panel-3">Третий панель</a>
+                        <a class="dropdown-item" href="@Url.Action("Index","Center")#panel-4">Четвертый панель</a>
                     </div>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown02" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">ИТ</a>
                     <div class="dropdown-menu" aria-labelledby="dropdown02">
-                        <a class="dropdown-item" href="@Url.Action("Index","IT",new { id=1})">Первый панель</a>
-                        <a class="dropdown-item" href="@Url.Action("Index","IT",new { id=2})">Второй панель</a>
-                        <a class="dropdown-item" href="@Url.Action("Index","IT",new { id=3})">Третий панель</a>
-                        <a class="dropdown-item" href="@Url.Action("Index","IT",new { id=4})">Четвертый панель</a>
+                        <a class="dropdown-item" href="@Url.Action("Index","IT")#panel-1">Первый панель</a>
+                        <a class="dropdown-item" href="@Url.Action("Index","IT")#panel-2">Второй панель</a>
+                        <a class="dropdown-item" href="@Url.Action("Index","IT")#panel-3">Третий панель</a>
+                        <a class="dropdown-item" href="@Url.Action("Index","IT")#panel-4">Четвертый панель</a>
                     </div>
                 </li>
             </ul>
