--- a/Wallboards.UI/Views/Account/Login.cshtml
+++ b/Wallboards.UI/Views/Account/Login.cshtml
@@ -30,7 +30,7 @@
             <input type="text" id="inputEmail" name="UserName" class="form-control" placeholder="Имя пользователя" required autofocus>
             <label for="inputPassword" class="sr-only">Пароль</label>
             <input type="password" id="inputPassword" name="Password" class="form-control" placeholder="Пароль" required> 
-            <button class="btn btn-lg btn-primary btn-block" type="submit">Войти</button>
+            <button class="btn btn-outline-success" type="submit">Войти</button>
         </form>
 
     </div> <!-- /container -->
